--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,1 +1,3 @@
-<ral-card *ngFor="let book of books" [book]="book"></ral-card>
+<div fxLayout="column" fxLayoutGap="8px" class="ral-browse__container">
+  <ral-card *ngFor="let book of books" [book]="book"></ral-card>
+</div>
