prototype: book detail

--- a/src/app/browse/book-detail/book-detail.component.scss
+++ b/src/app/browse/book-detail/book-detail.component.scss
@@ -12,6 +12,10 @@ p {
   margin-bottom: 8px;
 }
 
+.ral-book-detail__header__right {
+  width: 128px;
+}
+
 img {
   max-width: 128px;
   width: 128px;
