--- a/src/app/browse/book-detail/book-detail.component.html
+++ b/src/app/browse/book-detail/book-detail.component.html
@@ -7,18 +7,19 @@
       <p class="mat-body-1">{{book?.Subtitle}}</p>
       <h2 class="mat-body-2">Authors</h2>
       <p class="mat-body-1">{{book?.Authors}}</p>
+      <h2 class="mat-body-2">Publisher</h2>
+      <p class="mat-body-1">{{book?.Publisher}}</p>
+      <h2 class="mat-body-2">Published Date</h2>
+      <p class="mat-body-1">{{book?.PublishedDate}}</p>
+      <h2 class="mat-body-2">Page Count</h2>
+      <p class="mat-body-1">{{book?.PageCount}}</p>
     </div>
-    <div fxFlex="nogrow">
+    <div fxFlex="nogrow" fxLayout="column" fxLayoutGap="16px" class="ral-book-detail__header__right">
       <img [src]="book?.ThumbnailLink">
+      <button mat-raised-button color="primary">Borrow</button>
     </div>
   </div>
   <div class="ral-book-detail__content">
-    <h2 class="mat-body-2">Publisher</h2>
-    <p class="mat-body-1">{{book?.Publisher}}</p>
-    <h2 class="mat-body-2">Published Date</h2>
-    <p class="mat-body-1">{{book?.PublishedDate}}</p>
-    <h2 class="mat-body-2">Page Count</h2>
-    <p class="mat-body-1">{{book?.PageCount}}</p>
     <h2 class="mat-body-2">Description</h2>
     <p class="mat-body-1">{{book?.Description}}</p>
   </div>
