--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,4 @@
 
 @import "~normalize.css/normalize.css";
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
