--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,7 @@
 
 @import "~normalize.css/normalize.css";
 
-//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html,
+body {
+  background-color: #f7f7f7;
+}
