--- a/src/app/browse/book-detail/book-detail.component.html
+++ b/src/app/browse/book-detail/book-detail.component.html
@@ -16,7 +16,8 @@
     </div>
     <div fxFlex="nogrow" fxLayout="column" fxLayoutGap="16px" class="ral-book-detail__header__right">
       <img [src]="book?.ThumbnailLink">
-      <button mat-raised-button color="primary">Borrow</button>
+      <button mat-raised-button color="primary"
+        (click)="borrowBook(book.Id)">Borrow</button>
     </div>
   </div>
   <div class="ral-book-detail__content">
