--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,7 @@
-<p>
-  profile works!
-</p>
+<div fxLayout="column" fxLayoutGap="8px" class="container">
+  <ral-card
+    *ngFor="let book of books"
+    [book]="book.Book"
+    [routerLink]="['/profile/books', book.Book.Id]">
+  </ral-card>
+</div>
