lazy load image

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <div class="ral-card__thumbnail">
-      <img [src]="book?.ThumbnailLink">
+      <img [src]="thumbnailLink">
   </div>
   <div class="ral-card__content">
     <h2 class="ral-card__title mat-body-1">{{book.Title}}</h2>
