--- a/src/app/core/nav/nav.component.scss
+++ b/src/app/core/nav/nav.component.scss
@@ -1,5 +1,6 @@
 .ral-nav {
-  display:block;
+  display: block;
+  background-color: #fff;
 }
 
 // Overwrite angular material styles for mobile phone.
