--- a/src/app/core/login-dialog/login-dialog.component.scss
+++ b/src/app/core/login-dialog/login-dialog.component.scss
@@ -1,3 +1,20 @@
+:host {
+  display: block;
+  position: relative;
+}
+
 .hide {
   visibility: hidden;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+.mat-progress-bar {
+  position: absolute;
+  top: -24px;
+  left: -24px;
+  right: -24px;
+  width: auto;
 }
