--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,3 +1,12 @@
 .container {
   padding: 8px;
 }
+
+.message {
+  margin-top: 80px;
+}
+
+.mat-progress-bar {
+  width: 120px;
+  margin-top: 8px;
+}
