--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -2,11 +2,11 @@
   padding: 8px;
 }
 
-.message {
-  margin-top: 80px;
-}
-
 .mat-progress-bar {
   width: 120px;
   margin-top: 8px;
+}
+
+.ral-status {
+  margin-top: 80px;
 }
