--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,12 +1,9 @@
 <div fxLayout="column" fxLayoutGap="8px" class="container">
-  <div class="message"
-      *ngIf="isLoading"
-      fxLayout="column"
-      fxLayoutAlign="space-around center">
-    <div class="mat-body-1">{{message}}</div>
-    <mat-progress-bar
-      mode="indeterminate"></mat-progress-bar>
-  </div>
+  <ral-status
+    *ngIf="isLoading"
+    [message]="message"
+    [showProgress]="true"
+  ></ral-status>
   <ral-card
     *ngFor="let book of books"
     [book]="book.Book"
