--- a/src/app/browse/book-detail/book-detail.component.html
+++ b/src/app/browse/book-detail/book-detail.component.html
@@ -13,6 +13,8 @@
       <p class="mat-body-1">{{book?.PublishedDate}}</p>
       <h2 class="mat-body-2">Page Count</h2>
       <p class="mat-body-1">{{book?.PageCount}}</p>
+      <h2 class="mat-body-2">Code</h2>
+      <p class="mat-body-1">{{book?.Code}}</p>
     </div>
     <div fxFlex="nogrow" fxLayout="column" fxLayoutGap="16px" class="ral-book-detail__header__right">
       <img [src]="book?.ThumbnailLink">
