--- a/src/app/profile/borrow-book-detail/borrow-book-detail.component.html
+++ b/src/app/profile/borrow-book-detail/borrow-book-detail.component.html
@@ -17,6 +17,8 @@
       <p class="mat-body-1">{{book?.Book.PublishedDate}}</p>
       <h2 class="mat-body-2">Page Count</h2>
       <p class="mat-body-1">{{book?.Book.PageCount}}</p>
+      <h2 class="mat-body-2">Code</h2>
+      <p class="mat-body-1">{{book?.Book.Code}}</p>
     </div>
     <div fxFlex="nogrow" fxLayout="column" fxLayoutGap="16px" class="ral-book-detail__header__right">
       <img [src]="book?.Book.ThumbnailLink">
