--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -4,7 +4,9 @@
   </div>
   <div class="ral-card__content">
     <h2 class="ral-card__title mat-body-1">{{book.Title}}</h2>
-    <p class="ral-card__subtitle mat-body-1">{{book.Subtitle}}</p>
+    <!-- <p class="ral-card__subtitle mat-body-1">{{book.Subtitle}}</p> -->
     <p class="ral-card__detail mat-body-1">{{book.Authors}}</p>
   </div>
+  <div class="ral-card__badge"
+    [ngClass]="{ 'not-available': book.IsBorrowed }"></div>
 </mat-card>
