--- a/src/app/browse/book-detail/book-detail.component.html
+++ b/src/app/browse/book-detail/book-detail.component.html
@@ -18,7 +18,7 @@
     </div>
     <div fxFlex="nogrow" fxLayout="column" fxLayoutGap="16px" class="ral-book-detail__header__right">
       <img [src]="book?.ThumbnailLink">
-      <button mat-raised-button color="primary"
+      <button *ngIf="!isBorrowed" mat-raised-button color="primary"
         (click)="borrowBook(book.Id)">Borrow</button>
     </div>
   </div>
