--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
+<ral-user-toolbar (profile)="onClickProfile()"></ral-user-toolbar>
 <div fxLayout="column" fxLayoutGap="8px" class="container">
   <ral-status
     *ngIf="isLoading"
