--- a/src/app/core/login-dialog/login-dialog.component.html
+++ b/src/app/core/login-dialog/login-dialog.component.html
@@ -1,7 +1,7 @@
 <mat-progress-bar
   mode="indeterminate"
   [ngClass]="{ 'hide': !isLoading }"></mat-progress-bar>
-<div mat-dialog-content>
+<div mat-dialog-content *ngIf="!isSignIn">
   <mat-form-field>
     <span matPrefix>RA-INT \ &nbsp;</span>
     <input matInput placeholder="Username" [(ngModel)]="username" tabindex="1">
@@ -10,7 +10,11 @@
     <input matInput placeholder="Password" [(ngModel)]="password"  tabindex="2" type="password">
   </mat-form-field>
 </div>
+<div mat-dialog-content *ngIf="isSignIn">
+  <h2 class="title">Hi, {{name}}</h2>
+</div>
 <div fxLayoutAlign="space-around center" mat-dialog-actions>
   <button mat-button (click)="onClickCancel()" tabindex="3">Cancel</button>
-  <button color="primary" mat-button [attr.disabled]="isLoading" (click)="onClickSignIn()" tabindex="3">Sign in</button>
+  <button *ngIf="!isSignIn" color="primary" mat-button [attr.disabled]="isLoading" (click)="onClickSignIn()" tabindex="3">Sign in</button>
+  <button *ngIf="isSignIn" color="primary" mat-button [attr.disabled]="isLoading" (click)="onClickSignOut()" tabindex="3">Sign out</button>
 </div>
