--- a/src/app/profile/user-toolbar/user-toolbar.component.html
+++ b/src/app/profile/user-toolbar/user-toolbar.component.html
@@ -1,5 +1,3 @@
 <div class="container" fxLayout="row" fxLayoutAlign="end">
-  <button color="primary" mat-icon-button (click)="onClickProfile()">
-    <mat-icon aria-label="Example icon-button with a heart icon">person_outline</mat-icon>
-  </button>
+  <ng-content></ng-content>
 </div>
