--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ral-nav></ral-nav>
-<div class="content">
+<ral-nav fxFlex="none"></ral-nav>
+<div class="content" fxFlex>
   <router-outlet></router-outlet>
 </div>
