--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,9 +1,23 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  height: 100%
+}
+
+.search-form {
+  padding: 16px 16px 0 16px;
+}
+
+.mat-form-field {
   width: 100%;
 }
 
-.example-full-width {
-  width: 100%;
+.result {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 8px;
 }
