--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -8,6 +8,20 @@
   height: 100%
 }
 
+.search {
+  padding: 8px;
+}
+
+.input {
+  border: none;
+  outline: none;
+  appearance: none;
+}
+
+.mat-card {
+  padding: 0;
+}
+
 .search-form {
   padding: 16px 16px 0 16px;
 }
