--- a/src/app/browse/book-list/book-list.component.html
+++ b/src/app/browse/book-list/book-list.component.html
@@ -1,4 +1,5 @@
 <div fxLayout="column" fxLayoutGap="8px" class="container">
+  <ral-troubleshooting *ngIf="isError"></ral-troubleshooting>
   <ral-status
     *ngIf="isLoading"
     [message]="message"
