--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,11 +7,7 @@
   </button>
 </ral-user-toolbar>
 <div fxLayout="column" fxLayoutGap="8px" class="container">
-  <ral-status
-    *ngIf="isLoading"
-    [message]="message"
-    [showProgress]="true"
-  ></ral-status>
+  <ral-progress *ngIf="isLoading" message="Getting your books"></ral-progress>
   <ral-card
     *ngFor="let book of books"
     [enableBadge]="false"
