--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -20,3 +20,8 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+
+// Snack Bar
+.ral-error button {
+  color: #F44336;
+}
