--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 html,
 body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #f7f7f7;
   width: 100%;
   height: 100%;
