--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,8 +8,32 @@
 </ral-user-toolbar>
 <div fxLayout="column" fxLayoutGap="8px" class="container">
   <ral-progress *ngIf="isLoading" message="Getting your books"></ral-progress>
+  <div class="overdue" fxLayout="row" fxLayoutAlign="start center">
+    <mat-icon aria-label="Overdue books">sentiment_very_dissatisfied</mat-icon>
+    <span class="mat-caption">Overdue ({{overdueBooks?.length || 0}})</span>
+  </div>
   <ral-card
-    *ngFor="let book of books"
+    *ngFor="let book of overdueBooks"
+    [enableBadge]="false"
+    [book]="book.Book"
+    [routerLink]="['/profile/books', book.Book.Id]">
+  </ral-card>
+  <div class="will-overdue" fxLayout="row" fxLayoutAlign="start center">
+    <mat-icon aria-label="Overdue soon">sentiment_neutral</mat-icon>
+    <span class="mat-caption">Overdue Soon ({{willOverdueBooks?.length || 0}})</span>
+  </div>
+  <ral-card
+    *ngFor="let book of willOverdueBooks"
+    [enableBadge]="false"
+    [book]="book.Book"
+    [routerLink]="['/profile/books', book.Book.Id]">
+  </ral-card>
+  <div class="normal" fxLayout="row" fxLayoutAlign="start center">
+    <mat-icon aria-label="Enjoy reading">sentiment_very_satisfied</mat-icon>
+    <span class="mat-caption">Enjoy Reading ({{normalBooks?.length || 0}})</span>
+  </div>
+  <ral-card
+    *ngFor="let book of normalBooks"
     [enableBadge]="false"
     [book]="book.Book"
     [routerLink]="['/profile/books', book.Book.Id]">
