--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -10,3 +10,15 @@
 .ral-status {
   margin-top: 80px;
 }
+
+.overdue {
+  color: #F44336;  
+}
+
+.will-overdue {
+  color: #FF9800;
+}
+
+.normal {
+  color: #8BC34A;
+}
