--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
 </ral-user-toolbar>
 <div fxLayout="column" fxLayoutGap="8px" class="container">
   <ral-progress *ngIf="isLoading" message="Getting your books"></ral-progress>
-  <div class="overdue" fxLayout="row" fxLayoutAlign="start center">
+  <div *ngIf="overdueBooks?.length" class="overdue" fxLayout="row" fxLayoutAlign="start center">
     <mat-icon aria-label="Overdue books">sentiment_very_dissatisfied</mat-icon>
     <span class="mat-caption">Overdue ({{overdueBooks?.length || 0}})</span>
   </div>
@@ -18,7 +18,7 @@
     [book]="book.Book"
     [routerLink]="['/profile/books', book.Book.Id]">
   </ral-card>
-  <div class="will-overdue" fxLayout="row" fxLayoutAlign="start center">
+  <div *ngIf="willOverdueBooks?.length" class="will-overdue" fxLayout="row" fxLayoutAlign="start center">
     <mat-icon aria-label="Overdue soon">sentiment_neutral</mat-icon>
     <span class="mat-caption">Overdue Soon ({{willOverdueBooks?.length || 0}})</span>
   </div>
@@ -28,7 +28,7 @@
     [book]="book.Book"
     [routerLink]="['/profile/books', book.Book.Id]">
   </ral-card>
-  <div class="normal" fxLayout="row" fxLayoutAlign="start center">
+  <div *ngIf="normalBooks?.length" class="normal" fxLayout="row" fxLayoutAlign="start center">
     <mat-icon aria-label="Enjoy reading">sentiment_very_satisfied</mat-icon>
     <span class="mat-caption">Enjoy Reading ({{normalBooks?.length || 0}})</span>
   </div>
