--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,5 +1,11 @@
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
-  padding: 8px;
+  height: 100%;
 }
 
 .mat-progress-bar {
@@ -21,4 +27,10 @@
 
 .normal {
   color: #8BC34A;
+}
+
+.list {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 8px;
 }
