--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,37 +9,45 @@
       </button>
     </ral-user-toolbar>
   </div>
-  <div class="list" fxFlex fxLayout="column" fxLayoutGap="8px">
-    <ral-progress *ngIf="isLoading" message="Getting your books"></ral-progress>
-    <div fxFlex="none" *ngIf="overdueBooks?.length" class="overdue" fxLayout="row" fxLayoutAlign="start center">
+  <div class="list" fxFlex="initial" fxLayout="row" fxLayoutWrap>
+    <div fxFlex="100" *ngIf="isLoading">
+      <ral-progress message="Getting your books"></ral-progress>
+    </div>
+    <div fxFlex="100" *ngIf="overdueBooks?.length" class="overdue" fxLayout="row" fxLayoutAlign="start center">
       <mat-icon aria-label="Overdue books">sentiment_very_dissatisfied</mat-icon>
       <span class="mat-caption">Overdue ({{overdueBooks?.length || 0}})</span>
     </div>
-    <ral-card
-      *ngFor="let book of overdueBooks"
-      [enableBadge]="false"
-      [book]="book.Book"
-      [routerLink]="['/profile/books', book.Book.Id]">
-    </ral-card>
-    <div fxFlex="none" *ngIf="willOverdueBooks?.length" class="will-overdue" fxLayout="row" fxLayoutAlign="start center">
+    <div class="card-container"
+        *ngFor="let book of overdueBooks"
+        fxFlex="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.gt-md="25">
+      <ral-card
+        [book]="book.Book"
+        [enableBadge]="false"
+        [routerLink]="['/profile/books', book.Book.Id]"></ral-card>
+    </div>
+    <div fxFlex="100" *ngIf="willOverdueBooks?.length" class="will-overdue" fxLayout="row" fxLayoutAlign="start center">
       <mat-icon aria-label="Overdue soon">sentiment_neutral</mat-icon>
       <span class="mat-caption">Overdue Soon ({{willOverdueBooks?.length || 0}})</span>
     </div>
-    <ral-card
-      *ngFor="let book of willOverdueBooks"
-      [enableBadge]="false"
-      [book]="book.Book"
-      [routerLink]="['/profile/books', book.Book.Id]">
-    </ral-card>
-    <div fxFlex="none" *ngIf="normalBooks?.length" class="normal" fxLayout="row" fxLayoutAlign="start center">
+    <div class="card-container"
+        *ngFor="let book of willOverdueBooks"
+        fxFlex="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.gt-md="25">
+      <ral-card
+        [book]="book.Book"
+        [enableBadge]="false"
+        [routerLink]="['/profile/books', book.Book.Id]"></ral-card>
+    </div>
+    <div fxFlex="100" *ngIf="normalBooks?.length" class="normal" fxLayout="row" fxLayoutAlign="start center">
       <mat-icon aria-label="Enjoy reading">sentiment_very_satisfied</mat-icon>
       <span class="mat-caption">Enjoy Reading ({{normalBooks?.length || 0}})</span>
     </div>
-    <ral-card
-      *ngFor="let book of normalBooks"
-      [enableBadge]="false"
-      [book]="book.Book"
-      [routerLink]="['/profile/books', book.Book.Id]">
-    </ral-card>
+    <div class="card-container"
+        *ngFor="let book of normalBooks"
+        fxFlex="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.gt-md="25">
+      <ral-card
+        [book]="book.Book"
+        [enableBadge]="false"
+        [routerLink]="['/profile/books', book.Book.Id]"></ral-card>
+    </div>
   </div>
 </div>
