--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayout="column">
-  <div class="search" fxFlex="none">
+  <div fxFlex="none">
     <mat-card class="search-bar" fxLayout="row">
       <input class="input" fxFlex name="keyword" matInput placeholder="Title"
         [(ngModel)]="keyword" (keyup.enter)="search(keyword)"
