--- a/src/app/core/nav/nav.component.html
+++ b/src/app/core/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav mat-tab-nav-bar>
+<nav mat-tab-nav-bar backgroundColor="primary">
   <a mat-tab-link class="item"
      *ngFor="let link of navLinks"
      [routerLink]="link.path"
