--- a/src/app/core/nav/nav.component.scss
+++ b/src/app/core/nav/nav.component.scss
@@ -9,7 +9,11 @@
 }
 
 .mat-tab-link {
-  color: #4CAF50;
+  color: #fff !important;
   opacity: 1 !important;
   flex: 1;
+}
+
+.mat-ink-bar {
+  background-color: #2E7D32 !important;
 }
