--- a/src/app/browse/book-list/book-list.component.html
+++ b/src/app/browse/book-list/book-list.component.html
@@ -1,12 +1,11 @@
-<div fxLayout="row" class="container" fxLayoutWrap>
+<section fxLayout="row" fxLayoutWrap>
   <div *ngIf="isLoading" fxFlex="100">
     <ral-progress message="Getting books"></ral-progress>
   </div>
-  <div class="card-container"
-      *ngFor="let book of books"
+  <div class="ral-card-wrapper" *ngFor="let book of books"
       fxFlex="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.gt-md="25">
     <ral-card
       [book]="book"
       [routerLink]="['/browse/books', book.Id]"></ral-card>
   </div>
-</div>
+</section>
