--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -34,7 +34,7 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 }
 
 .mat-ink-bar {
-  background-color: #2E7D32 !important;
+  background-color: #1B5E20 !important;
 }
 
 
