--- a/src/app/shared/book/book.component.scss
+++ b/src/app/shared/book/book.component.scss
@@ -2,10 +2,24 @@
   display: block;
 }
 
+.thumbnail-wrapper {
+  position: relative;
+}
+
 img {
   width: auto;
   max-width: 128px;
   height: 168px;
+}
+
+.notes {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  padding: 0 4px;
+  background-color: rgba(244, 67, 54, .87);  // Red 500
+  color: rgba(255, 255, 255, .7);
 }
 
 .secondary-text {
